--- a/clase_6_20221025/vistas/index.html
+++ b/clase_6_20221025/vistas/index.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi primera pagina web</title>
 </head>
 <body>
     <h1>Hola desde archivo html</h1>
+    <h4>sub titulo</h4>
+    <p>Lorem ipsum dolor sit amet consectetur uam maxime assumenda dicta unde temporibus quae accusantium ut tempore et accusamus cum molestiae?</p>
+    <ul>
+        <li>Elemento 1</li>
+        <li>Elemento 2</li>
+        <li>Elemento 3</li>
+        <li>Elemento 4</li>
+    </ul>
+    <table>
+        <thead>
+            <tr>
+                <th>Nombre</th>
+                <th>Apellido</th>
+                <th>edad</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Julio</td>
+                <td>Capellan</td>
+                <td>30</td>
+            </tr>
+        </tbody>
+    </table>
+    <input type="text">
 </body>
 </html>
